Fixed error in Polysem.ipynlib, links in README.

--- a/Polysem.ipynb
+++ b/Polysem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -89,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: <bound method BaseSession.__del__ of <tensorflow.python.client.session.InteractiveSession object at 0x11c1b1a20>>\n",
+      "Exception ignored in: <bound method BaseSession.__del__ of <tensorflow.python.client.session.InteractiveSession object at 0x1183dfbe0>>\n",
       "Traceback (most recent call last):\n",
       "  File \"//anaconda/lib/python3.5/site-packages/tensorflow/python/client/session.py\", line 171, in __del__\n",
       "    self.close()\n",
@@ -108,11 +108,11 @@
      "text": [
       "Initialized!\n",
       "Training.\n",
-      "Accuracy at step 0: 0.295082\n",
-      "Accuracy at step 10: 0.704918\n",
-      "Accuracy at step 20: 0.967213\n",
-      "Accuracy at step 30: 0.967213\n",
-      "Accuracy at step 40: 0.967213\n",
+      "Accuracy at step 0: 0.721311\n",
+      "Accuracy at step 10: 0.786885\n",
+      "Accuracy at step 20: 0.983607\n",
+      "Accuracy at step 30: 0.983607\n",
+      "Accuracy at step 40: 0.983607\n",
       "Accuracy at step 50: 0.983607\n",
       "Accuracy at step 60: 0.983607\n",
       "Accuracy at step 70: 0.983607\n",
@@ -273,9 +273,9 @@
     "        #writer.add_summary(summary_str, step)\n",
     "        print(\"Accuracy at step %s: %s\" % (step, result))\n",
     "    else: # actually do learning\n",
-    "        offset = (step * BATCH_SIZE) % train_size\n",
-    "        batch_data = train_data[offset:(offset + BATCH_SIZE), :]\n",
-    "        batch_labels = train_labels[offset:(offset + BATCH_SIZE)]\n",
+    "        offset = step % train_size\n",
+    "        batch_data = train_data[offset:(offset + 1), :]\n",
+    "        batch_labels = train_labels[offset:(offset + 1)]\n",
     "        feed={x: batch_data, y_: batch_labels}\n",
     "        sess.run(train_step, feed_dict=feed)\n",
     "    \n",
