--- a/Polysem.ipynb
+++ b/Polysem.ipynb
@@ -79,103 +79,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method BaseSession.__del__ of <tensorflow.python.client.session.InteractiveSession object at 0x1183dfbe0>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"//anaconda/lib/python3.5/site-packages/tensorflow/python/client/session.py\", line 171, in __del__\n",
-      "    self.close()\n",
-      "  File \"//anaconda/lib/python3.5/site-packages/tensorflow/python/client/session.py\", line 976, in close\n",
-      "    self._default_session.__exit__(None, None, None)\n",
-      "  File \"//anaconda/lib/python3.5/contextlib.py\", line 66, in __exit__\n",
-      "    next(self.gen)\n",
-      "  File \"//anaconda/lib/python3.5/site-packages/tensorflow/python/framework/ops.py\", line 3378, in get_controller\n",
-      "    % type(default))\n",
-      "AssertionError: Nesting violated for default stack of <class 'weakref'> objects\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Initialized!\n",
+      "\n",
       "Training.\n",
-      "Accuracy at step 0: 0.721311\n",
-      "Accuracy at step 10: 0.786885\n",
-      "Accuracy at step 20: 0.983607\n",
-      "Accuracy at step 30: 0.983607\n",
-      "Accuracy at step 40: 0.983607\n",
-      "Accuracy at step 50: 0.983607\n",
-      "Accuracy at step 60: 0.983607\n",
-      "Accuracy at step 70: 0.983607\n",
-      "Accuracy at step 80: 0.983607\n",
-      "Accuracy at step 90: 0.983607\n",
-      "Accuracy at step 100: 0.983607\n",
-      "Accuracy at step 110: 0.983607\n",
-      "Accuracy at step 120: 0.983607\n",
-      "Accuracy at step 130: 0.983607\n",
-      "Accuracy at step 140: 0.983607\n",
-      "Accuracy at step 150: 0.983607\n",
-      "Accuracy at step 160: 0.983607\n",
-      "Accuracy at step 170: 0.983607\n",
-      "Accuracy at step 180: 0.983607\n",
-      "Accuracy at step 190: 0.983607\n",
-      "Accuracy at step 200: 0.983607\n",
-      "Accuracy at step 210: 0.983607\n",
-      "Accuracy at step 220: 0.983607\n",
-      "Accuracy at step 230: 0.983607\n",
-      "Accuracy at step 240: 0.983607\n",
-      "Accuracy at step 250: 0.983607\n",
-      "Accuracy at step 260: 0.983607\n",
-      "Accuracy at step 270: 0.983607\n",
-      "Accuracy at step 280: 0.983607\n",
-      "Accuracy at step 290: 0.983607\n",
-      "Accuracy at step 300: 0.983607\n",
-      "Accuracy at step 310: 0.983607\n",
-      "Accuracy at step 320: 0.983607\n",
-      "Accuracy at step 330: 0.983607\n",
-      "Accuracy at step 340: 0.983607\n",
-      "Accuracy at step 350: 0.983607\n",
-      "Accuracy at step 360: 0.983607\n",
-      "Accuracy at step 370: 0.983607\n",
-      "Accuracy at step 380: 0.983607\n",
-      "Accuracy at step 390: 0.983607\n",
-      "Accuracy at step 400: 0.983607\n",
-      "Accuracy at step 410: 0.983607\n",
-      "Accuracy at step 420: 0.983607\n",
-      "Accuracy at step 430: 0.983607\n",
-      "Accuracy at step 440: 0.983607\n",
-      "Accuracy at step 450: 0.983607\n",
-      "Accuracy at step 460: 0.983607\n",
-      "Accuracy at step 470: 0.983607\n",
-      "Accuracy at step 480: 0.983607\n",
-      "Accuracy at step 490: 0.983607\n",
-      "Accuracy at step 500: 0.983607\n",
-      "Accuracy at step 510: 0.983607\n",
-      "Accuracy at step 520: 0.983607\n",
-      "Accuracy at step 530: 0.983607\n",
-      "Accuracy at step 540: 0.983607\n",
-      "Accuracy at step 550: 0.983607\n",
-      "Accuracy at step 560: 0.983607\n",
-      "Accuracy at step 570: 0.983607\n",
-      "Accuracy at step 580: 0.983607\n",
-      "Accuracy at step 590: 0.983607\n",
-      "Accuracy at step 600: 0.983607\n",
-      "Accuracy at step 610: 0.983607\n",
-      "Accuracy at step 620: 0.983607\n",
-      "Accuracy at step 630: 0.983607\n",
-      "Accuracy at step 640: 0.983607\n",
-      "Accuracy at step 650: 0.983607\n",
-      "Accuracy at step 660: 0.983607\n",
-      "0.983607\n"
+      "Accuracy at step 0: 0.52459\n",
+      "Accuracy at step 10: 0.639344\n",
+      "Accuracy at step 20: 0.967213\n",
+      "Accuracy at step 30: 0.967213\n",
+      "Accuracy at step 40: 0.967213\n",
+      "Accuracy at step 50: 0.967213\n",
+      "Accuracy at step 60: 0.967213\n",
+      "Accuracy at step 70: 0.95082\n",
+      "Accuracy at step 80: 0.95082\n",
+      "Accuracy at step 90: 0.95082\n",
+      "Accuracy at step 100: 0.95082\n",
+      "Accuracy at step 110: 0.95082\n",
+      "Accuracy at step 120: 0.95082\n",
+      "Accuracy at step 130: 0.95082\n",
+      "Accuracy at step 140: 0.95082\n",
+      "Accuracy at step 150: 0.95082\n",
+      "Accuracy at step 160: 0.95082\n",
+      "Accuracy at step 170: 0.95082\n",
+      "Accuracy at step 180: 0.95082\n",
+      "Accuracy at step 190: 0.95082\n",
+      "Accuracy at step 200: 0.95082\n",
+      "Accuracy at step 210: 0.95082\n",
+      "Accuracy at step 220: 0.95082\n",
+      "Accuracy at step 230: 0.95082\n",
+      "Accuracy at step 240: 0.95082\n",
+      "Accuracy at step 250: 0.95082\n",
+      "Accuracy at step 260: 0.95082\n",
+      "Accuracy at step 270: 0.95082\n",
+      "Accuracy at step 280: 0.95082\n",
+      "Accuracy at step 290: 0.95082\n",
+      "Accuracy at step 300: 0.95082\n",
+      "Accuracy at step 310: 0.95082\n",
+      "Accuracy at step 320: 0.95082\n",
+      "Accuracy at step 330: 0.95082\n",
+      "Accuracy at step 340: 0.95082\n",
+      "Accuracy at step 350: 0.95082\n",
+      "Accuracy at step 360: 0.95082\n",
+      "Accuracy at step 370: 0.95082\n",
+      "Accuracy at step 380: 0.95082\n",
+      "Accuracy at step 390: 0.95082\n",
+      "Accuracy at step 400: 0.95082\n",
+      "Accuracy at step 410: 0.95082\n",
+      "Accuracy at step 420: 0.95082\n",
+      "Accuracy at step 430: 0.95082\n",
+      "Accuracy at step 440: 0.95082\n",
+      "Accuracy at step 450: 0.95082\n",
+      "Accuracy at step 460: 0.95082\n",
+      "Accuracy at step 470: 0.95082\n",
+      "Accuracy at step 480: 0.95082\n",
+      "Accuracy at step 490: 0.95082\n",
+      "Accuracy at step 500: 0.95082\n",
+      "Accuracy at step 510: 0.95082\n",
+      "Accuracy at step 520: 0.95082\n",
+      "Accuracy at step 530: 0.95082\n",
+      "Accuracy at step 540: 0.95082\n",
+      "Accuracy at step 550: 0.95082\n",
+      "Accuracy at step 560: 0.95082\n",
+      "Accuracy at step 570: 0.95082\n",
+      "Accuracy at step 580: 0.95082\n",
+      "Accuracy at step 590: 0.95082\n",
+      "Accuracy at step 600: 0.95082\n",
+      "Accuracy at step 610: 0.95082\n",
+      "Accuracy at step 620: 0.95082\n",
+      "Accuracy at step 630: 0.95082\n",
+      "Accuracy at step 640: 0.95082\n",
+      "Accuracy at step 650: 0.95082\n",
+      "Accuracy at step 660: 0.95082\n",
+      "0.95082\n"
      ]
     }
    ],
@@ -293,6 +277,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
@@ -301,14 +286,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
